# Survival-of-the-Wealthiest

./: README.md
backend/: agents_store.py  app.py  crew.py  pyproject.toml  stocks.py
backend/config/: agents.yaml  tasks.yaml
frontend/: package-lock.json  package.json
frontend/src/api/: client.ts
frontend/src/app/: page.tsx
frontend/src/components/: AgentCard.tsx
